# ledger-cosmos-obsolete

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  nanocli.sh
.ccache/: .gitignore
.circleci/: config.yml
docs/: BUILD.md
fuzzing/: fuzzingMain.cpp
fuzzing/scripts/: build.sh  login.sh  plot.sh
src/: install_deps.sh
src/ledger/src/: actions.h
src/ledger/src/lib/: crypto.h
tests/: json_parser.cpp  testcases.json  tx_parse.cpp  tx_validate.cpp  ui_output.cpp
tests/user/: common.cpp  common.h  fuzzing.md  fuzzingMain.cpp  json_parser.cpp  parser_complete.cpp  testcases.json  transaction_parser.cpp  tx_display.cpp  tx_iterator.cpp  tx_parse.cpp  tx_validate.cpp  ui_output.cpp
tests/user/fuzz-testcases/: inputs.txt
tests/user/util/: common.cpp  common.h
tests/util/: common.cpp  common.h  testcases.cpp  testcases.h
tests/val/: json_parser.cpp  validation_parser.cpp  vote_fsm.cpp  vote_parser.cpp
tools/: upgrade_deps.sh  upgrade_sdk.sh
